<resources>
    <string name="app_name" translatable="false">&appName;</string>
    <string name="vertical_separator" translatable="false">|</string>
    <string name="assistant_web_platform_link" translatable="false">subscribe.linphone.org</string>
    <string name="assistant_linphone_contact_us_link" translatable="false">linphone.org/contact</string>
    <string name="notification_channel_call_id" translatable="false">linphone_6.0_notification_call_id</string>
    <string name="notification_channel_incoming_call_id" translatable="false">linphone_6.0_notification_incoming_call_id</string>
    <string name="notification_channel_missed_call_id" translatable="false">linphone_6.0_notification_missed_call_id</string>
    <string name="notification_channel_service_id" translatable="false">linphone_6.0_notification_service_id</string>
    <string name="notification_channel_chat_id" translatable="false">linphone_6.0_notification_chat_id</string>
    <string name="notification_channel_without_ringtone_incoming_call_id" translatable="false">linphone_6.0.1_notification_incoming_call_id</string>
    <string name="emoji_love" translatable="false">❤️</string>
    <string name="emoji_thumbs_up" translatable="false">👍</string>
    <string name="emoji_laughing" translatable="false">😂</string>
    <string name="emoji_surprised" translatable="false">😮</string>
    <string name="emoji_tear" translatable="false">😢</string>
    <string name="help_about_open_source_licenses_title" translatable="false">GNU General Public License v3.0</string>
    <string name="help_about_open_source_licenses_subtitle" translatable="false">© Belledonne Communications 2010-2024</string>
    <string name="help_advanced_send_debug_logs_email_address" translatable="false">linphone-android@belledonne-communications.com</string>
    <string name="website_contact_url" translatable="false">https://linphone.org/contact</string>
    <string name="website_download_url" translatable="false">https://linphone.org/linphone-softphone</string>
    <string name="website_privacy_policy_url" translatable="false">https://linphone.org/en/privacy-policy</string>
    <string name="website_terms_and_conditions_url" translatable="false">https://www.linphone.org/en/terms-of-use</string>
    <string name="web_platform_register_email_url" translatable="false">https://subscribe.linphone.org/register/email</string>
    <string name="web_platform_forgotten_password_url" translatable="false">https://subscribe.linphone.org/</string>
    <string name="website_translate_weblate_url" translatable="false">https://weblate.linphone.org/</string>
    <string name="website_open_source_licences_usage_url" translatable="false">https://wiki.linphone.org/xwiki/wiki/public/view/Linphone/Third%20party%20components%20/#Hlinphone-android</string>
    <string name="conversation_end_to_end_encrypted_bottom_sheet_link" translatable="false"><u>https://linphone.org/en/features/#security</u></string>
    <string name="conversation_one_to_one_hidden_subject" translatable="false">Dummy subject</string>
    <string name="sip_address">SIP address</string>
    <string name="device_id">Device ID</string>
    <string name="sip_address_display_name">Display name</string>
    <string name="sip_address_domain">Domain</string>
    <string name="username">Username</string>
    <string name="authentication_id">Authentication ID (if different)</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="or">or</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <plurals name="days">
        <item quantity="one">%s day</item>
        <item quantity="other">%s days</item>
    </plurals>
    <plurals name="selection_count_label">
        <item quantity="one">%s selected</item>
        <item quantity="other">%s selected</item>
    </plurals>
    <string name="dialog_deny">Deny</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_call">Call</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_install">Install</string>
    <string name="dialog_do_not_show_anymore">Do not show this dialog anymore</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="notification_channel_call_name">&appName; active calls notifications</string>
    <string name="notification_channel_incoming_call_name">&appName; incoming calls notifications</string>
    <string name="notification_channel_missed_call_name">&appName; missed calls notifications</string>
    <string name="notification_channel_service_name">&appName; service notification</string>
    <string name="notification_channel_service_desc">This service will run all the time to keep app alive and allow you to receive calls and messages without push notifications.</string>
    <string name="notification_channel_chat_name">&appName; instant messages notifications</string>
    <string name="notification_chat_message_reaction_received">Reacted by %1$s to: %2$s</string>
    <string name="notification_mark_message_as_read">Mark as read</string>
    <string name="notification_reply_to_message">Reply</string>
    <string name="notification_missed_call">Missed call from %s</string>
    <string name="notification_missed_group_call">Missed group call: %s</string>
    <string name="notification_missed_calls">%s missed calls</string>
    <string name="notification_missed_call_title">Missed call</string>
    <string name="notification_push_received_title">&appName;</string>
    <string name="notification_push_received_message">Searching for new messages</string>
    <string name="notification_file_transfer_title">&appName;</string>
    <string name="notification_file_transfer_startup_message">File(s) transfer in progress</string>
    <plurals name="notification_file_transfer_upload">
        <item quantity="one">%s file being uploaded</item>
        <item quantity="other">%s files being uploaded</item>
    </plurals>
    <plurals name="notification_file_transfer_download">
        <item quantity="one">%s file being downloaded</item>
        <item quantity="other">%s files being downloaded</item>
    </plurals>
    <string name="notification_file_transfer_upload_download_message" translatable="false">%s, %s</string>
    <string name="notification_keep_app_alive_message">Click to open</string>
    <string name="welcome_page_title">Welcome</string>
    <string name="welcome_page_subtitle">in &appName;</string>
    <string name="welcome_page_1_message">A <b>secured</b>, <b>open source</b> and <b>French</b> communication app.</string>
    <string name="welcome_page_2_title">Secured</string>
    <string name="welcome_page_2_message">Your communications are safe thanks to our <b>end-to-end encryption</b>.</string>
    <string name="welcome_page_3_title">Open source</string>
    <string name="welcome_page_3_message">A <b>free</b> and open source application since <b>2001</b>.</string>
    <string name="sip_address_copied_to_clipboard_toast">SIP address copied into clipboard</string>
    <string name="new_account_configured_toast">New account configured</string>
    <string name="default_account_connection_state_error_toast">Connection error!</string>
    <string name="file_successfully_exported_to_media_store_toast">File has been exported to native gallery</string>
    <string name="export_file_to_media_store_error_toast">Error trying to export file to native gallery</string>
    <string name="file_successfully_exported_to_documents_toast">File has been exported to documents</string>
    <string name="export_file_to_documents_error_toast">Error trying to export file to documents</string>
    <string name="media_playback_low_volume_warning_toast">Media volume is low, you may not hear anything!</string>
    <string name="remote_provisioning_config_applied_toast">Configuration successfully applied</string>
    <string name="remote_provisioning_config_failed_toast">Error while trying to download and apply remote configuration</string>
    <string name="media_player_generic_error_toast">Error trying to create media player</string>
    <string name="assistant_dialog_general_terms_and_privacy_policy_title">General terms &amp; privacy policy</string>
    <string name="assistant_dialog_general_terms_label">general terms</string>
    <string name="assistant_dialog_privacy_policy_label">privacy policy</string>
    <string name="assistant_dialog_general_terms_and_privacy_policy_message">By continuing, you accept our %1$s and %2$s.</string>
    <string name="assistant_dialog_confirm_phone_number_title">Confirm phone number</string>
    <string name="assistant_dialog_confirm_phone_number_message">Are you sure your phone number is %s?</string>
    <string name="assistant_account_login">Login</string>
    <string name="assistant_scan_qr_code">Scan QR code</string>
    <string name="assistant_qr_code_invalid_toast">Invalid QR code!</string>
    <string name="assistant_login_third_party_sip_account">Use a third party SIP account</string>
    <string name="assistant_login_third_party_sip_account_title">Third party SIP account</string>
    <string name="assistant_login_using_single_sign_on">Single sign on</string>
    <string name="assistant_login_cant_parse_address_toast">SIP address is invalid!</string>
    <string name="assistant_login_address_without_username_toast">SIP address doesn\'t contains a username!</string>
    <string name="assistant_account_login_already_connected_error">Account already exists</string>
    <string name="assistant_no_account_yet">No account yet?</string>
    <string name="assistant_account_register">Register</string>
    <string name="assistant_account_creation_sms_confirmation_title">Confirm your phone number</string>
    <string name="assistant_account_creation_sms_confirmation_explanation">We have sent a verification code on your phone number %1$s.\n\nPlease enter the verification code below:</string>
    <string name="assistant_account_creation_wrong_phone_number">Wrong number?</string>
    <string name="assistant_account_create">Create</string>
    <string name="assistant_create_account_using_email_on_our_web_platform">Create an account with your email on:</string>
    <string name="assistant_already_have_an_account">Already have an account?</string>
    <string name="assistant_sip_account_transport_protocol">Transport</string>
    <string name="assistant_third_party_sip_account_warning_explanation">Some features require a &appName; account, such as group messaging, video conferences…\n\nThese features are hidden when you register with a third party SIP account.\n\nTo enable it in a commercial project, please contact us.</string>
    <string name="assistant_third_party_sip_account_create_linphone_account">I prefer to create an account</string>
    <string name="assistant_forgotten_password"><u>Forgotten password?</u></string>
    <string name="content_description_go_back_icon">Go back</string>
    <string name="content_description_toggle_password_visibility">Toggles password visibility</string>
    <string name="popup_pasos_a_seguir">To recover your password, follow the instructions below:</string>
    <string name="popup_paso1">Log in to our website (https://mundosms.es) and in the side menu go to the calls section and \'Extensions or SIP Lines\' and click on this section:</string>
    <string name="popup_paso2">Then copy the password that should be located in this area. But BE CAREFUL, if you paste the password directly some space may be stuck, make sure there is none.</string>
</resources>